# website

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  Taskfile.ui.yml  Taskfile.yml  docker-compose.yml
api/: Cargo.toml  Dockerfile
api-axum/: Cargo.toml  Dockerfile
api-axum/src/: error.rs  http_tracing.rs  main.rs  routes.rs  state.rs  util.rs
api-axum/src/handlers/: news.rs  wow.rs
api-axum/src/models/: news.rs
api-axum/src/routes/: downloads.rs  mod.rs  news.rs  pictures.rs  static_files.rs  wow.rs
api-warp/: Cargo.toml  Dockerfile
api-warp/src/: main.rs  options.rs  state.rs
api-warp/src/handlers/: mod.rs  news.rs  static_files.rs
api-warp/src/models/: downloads.rs  mod.rs  pictures.rs
api-warp/src/routes/: downloads.rs  mod.rs
api/src/: constants.rs  error.rs  main.rs  options.rs  util.rs
api/src/handlers/: downloads.rs  mod.rs  news.rs  pictures.rs  static_files.rs  wow.rs
api/src/models/: downloads.rs  mod.rs  news.rs  pictures.rs  wow.rs
api/src/routes/: downloads.rs  mod.rs  news.rs  pictures.rs  static_files.rs  wow.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/aws/: dynamodb.rs  mod.rs
energonsoftware/: Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  tslint.json
energonsoftware/e2e/src/: app.e2e-spec.ts
energonsoftware/src/: index.html  main.ts  palette.scss  polyfills.ts  styles.scss  theme.scss  tsconfig.app.json  tsconfig.spec.json
energonsoftware/src/app/: app-material.module.ts  app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts
energonsoftware/src/app/components/resume/: resume.component.html  resume.component.ts
energonsoftware/src/app/core/: downloads.spec.ts  downloads.ts  news.spec.ts  news.ts  pictures.spec.ts  pictures.ts  unicode.spec.ts  unicode.ts  utils.spec.ts  utils.ts  wow.spec.ts  wow.ts
energonsoftware/src/app/http-interceptors/: http-error.interceptor.ts  http-request.interceptor.ts  http-response.interceptor.ts  index.ts
energonsoftware/src/app/navigation/: navigation.component.html  navigation.component.ts
energonsoftware/src/app/pages/about/: about.component.html  about.component.ts
energonsoftware/src/app/pages/downloads/: downloads.component.html  downloads.component.spec.ts  downloads.component.ts
energonsoftware/src/app/pages/home/: home.component.html  home.component.ts
energonsoftware/src/app/pages/kennel/: kennel.component.html  kennel.component.spec.ts  kennel.component.ts
energonsoftware/src/app/pages/links/: links.component.html  links.component.spec.ts  links.component.ts
energonsoftware/src/app/pages/news/: news.component.html  news.component.spec.ts  news.component.ts
energonsoftware/src/app/pages/notepad/: notepad.component.html  notepad.component.ts
energonsoftware/src/app/pages/oct2005cabin/: oct2005cabin.component.html  oct2005cabin.component.spec.ts  oct2005cabin.component.ts
energonsoftware/src/app/pages/raw-xp/: raw-xp.component.html  raw-xp.component.spec.ts  raw-xp.component.ts
energonsoftware/src/app/pages/socket/: socket.component.html  socket.component.spec.ts  socket.component.ts
energonsoftware/src/app/pages/unicode/: unicode.component.html  unicode.component.spec.ts  unicode.component.ts
energonsoftware/src/app/pages/wow/: wow.component.html  wow.component.spec.ts  wow.component.ts
energonsoftware/src/app/pages/wow-addons/: wow-addons.component.html  wow-addons.component.spec.ts  wow-addons.component.ts
energonsoftware/src/app/pages/wow-macros/: wow-macros.component.html  wow-macros.component.spec.ts  wow-macros.component.ts
energonsoftware/src/app/pages/wow-screenshots/: wow-screenshots.component.html  wow-screenshots.component.spec.ts  wow-screenshots.component.ts
energonsoftware/src/app/pages/wow-screenshots-ragnaros/: wow-screenshots-ragnaros.component.html  wow-screenshots-ragnaros.component.spec.ts  wow-screenshots-ragnaros.component.ts
energonsoftware/src/app/pipes/: safe-html.pipe.spec.ts  safe-html.pipe.ts
energonsoftware/src/app/services/: downloads.service.spec.ts  downloads.service.ts  news.service.spec.ts  news.service.ts  pictures.service.spec.ts  pictures.service.ts  wow.service.spec.ts  wow.service.ts
energonsoftware/src/app/workers/: unicode.worker.ts
energonsoftware/src/environments/: environment.prod.ts  environment.ts
share/vacation/: oct2005cabin.json
share/wow/: addons.json  keybinds.ini  macros.json  mounts.ini  ragnaros.json  screenshots.json
static/programs/: eject.c  status.diff
static/programs/c2html/: c2html.pl
taskfiles/: Taskfile.api.yml  Taskfile.static.yml
