[package]
name = "api-axum"
version = "0.1.0"
authors = ["Shane Lillie <ignignokterr@gmail.com>"]
edition = "2021"

[[bin]]
name = "energonsoftware-axum"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
aws-config = "1.5"
axum = { version = "0.7", features = ["macros"] }
clap = { version = "4.5", features = ["derive"] }
console-subscriber = "0.4"
dynamodb_expression = { git = "https://github.com/Luminoth/dynamodb_expression" }
http = "1.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.39", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.energonsoftware]
version = "*"
path = "../core"
