[package]
name = "api-warp"
version = "0.1.0"
authors = ["Shane Lillie <ignignokterr@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "energonsoftware-warp"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
aws-config = "1.5"
clap = { version = "4.5", features = ["derive"] }
console-subscriber = "0.4"
dynamodb_expression = { git = "https://github.com/Luminoth/dynamodb_expression" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39", features = ["full", "tracing"] }
tracing = "0.1"
tracing-subscriber = "0.3"
warp = "0.3"

[dependencies.energonsoftware]
version = "*"
path = "../core"
