[package]
name = "api"
version = "0.1.0"
authors = ["Shane Lillie <ignignokterr@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "energonsoftware"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
console-subscriber = "0.1"
dynamodb_expression = { git = "https://github.com/Luminoth/dynamodb_expression" }
dynomite = { version = "0.10", default-features = false, features = ["rustls"] }
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.24", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
warp = "0.3"

[dependencies.energonsoftware]
version = "*"
path = "../core"
