[package]
name = "api"
version = "0.1.1"
authors = ["Shane Lillie <ignignokterr@gmail.com>"]
edition = "2024"

[[bin]]
name = "energonsoftware"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
aws-config = "1.8"
axum = { version = "0.8", features = ["macros"] }
clap = { version = "4.5", features = ["derive"] }
console-subscriber = "0.4"
dynamodb_expression = { git = "https://github.com/Luminoth/dynamodb_expression" }
http = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# tracing requires tokio_unstable in .cargo/config.toml
tokio = { version = "1.47", features = ["full", "tracing"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.energonsoftware]
version = "*"
path = "../core"
