[package]
name = "energonsoftware"
version = "0.1.0"
authors = ["Shane Lillie <ignignokterr@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
aws-config = "0.48"
aws-sdk-dynamodb = "0.18"
dynamodb_expression = { git = "https://github.com/Luminoth/dynamodb_expression" }
dynomite = { version = "0.10", default-features = false, features = ["rustls"] }
tracing = "0.1"
