[package]
name = "energonsoftware"
version = "0.1.0"
authors = ["Shane Lillie <ignignokterr@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
aws-config = "0.52"
aws-sdk-dynamodb = "0.22"
dynamodb_expression = { git = "https://github.com/Luminoth/dynamodb_expression" }
serde = "1.0"
serde_dynamo = { version = "4.2", features = ["aws-sdk-dynamodb+0_22"] }
tracing = "0.1"
